<resources>
    <string name="app_name">ImageEditLibrary</string>
    <string name="no_images">no found the image</string>
    <string name="images">%d images</string>
    <string name="save">save</string>
    <string name="apply">apply</string>

    <string name="stickers">stickers</string>
    <string name="filter">filter</string>
    <string name="crop">crop</string>
    <string name="rotate">rotate</string>
    <string name="text">text</string>
    <string name="edit">edit</string>



    <string name="materialcolorpicker__app_name">Android Material Color Picker Dialog</string>
    <string name="materialcolorpicker__descLib">Material Color Picker Dialog</string>
    <string name="materialcolorpicker__errHex">Hex Code Format incorrect</string>
    <string name="materialcolorpicker__inputColor">Color:</string>
    <string name="materialcolorpicker__btnSelectColor">Select</string>
    <string name="saving_image">save...</string>
    <string name="input_hint">input text ...</string>

    <string name="no_choose">please choose a image for edit</string>
    <string name="auto_newline">AutoNewline</string>
    <string name="save_error">Save error!</string>
    <string name="handing">loading...</string>

    <string-array name="filters">
        <item>origin</item>
        <item>soft</item>
        <item>black</item>
        <item>classic</item>
        <item>gorgeous</item>
        <item>retro</item>
        <item>grace</item>
        <item>film</item>
        <item>memory</item>
        <item>yogurt</item>
        <item>fleeting</item>
        <item>shine</item>
        <item>mosaic</item>
    </string-array>

    <string name="more">more</string>
    <string name="exit_without_save">The edited image is not saved. Do you want to exit? </string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>

    <string name="beauty">beauty</string>
    <string name="smooth">smooth</string>
    <string name="white_skin">white skin</string>

    <string name="enhance">增强</string>
    <string name="frame">相框</string>
    <string name="chartlet">拼图</string>
</resources>
