<HorizontalScrollView
    android:id="@+id/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbars="none"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/bottom_banner_height">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_width="@dimen/editor_mid_row_size"
            android:layout_height="@dimen/editor_mid_row_size" >
            <ImageView
                android:id="@+id/btn_paint"
                android:layout_width="@dimen/icon_item_image_size_recycler"
                android:layout_height="@dimen/icon_item_image_size_recycler"
                android:scaleType="fitCenter"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_paint_image_edit"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/icon_item_title_size"
                android:text="@string/edit"/>

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_width="@dimen/editor_mid_row_size"
            android:layout_height="@dimen/editor_mid_row_size" >
            <ImageView
                android:id="@+id/btn_stickers"
                android:layout_width="@dimen/icon_item_image_size_recycler"
                android:layout_height="@dimen/icon_item_image_size_recycler"
                android:scaleType="fitCenter"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_sticker"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/icon_item_title_size"
                android:text="@string/stickers"/>

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_width="@dimen/editor_mid_row_size"
            android:layout_height="@dimen/editor_mid_row_size" >
            <ImageView
                android:id="@+id/btn_filter"
                android:layout_width="@dimen/icon_item_image_size_recycler"
                android:layout_height="@dimen/icon_item_image_size_recycler"
                android:scaleType="fitCenter"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_filter"
                android:background="@android:color/transparent"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/icon_item_title_size"
                android:text="@string/filter"/>

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_width="@dimen/editor_mid_row_size"
            android:layout_height="@dimen/editor_mid_row_size" >
            <ImageView
                android:id="@+id/btn_crop"
                android:layout_width="@dimen/icon_item_image_size_recycler"
                android:layout_height="@dimen/icon_item_image_size_recycler"
                android:scaleType="fitCenter"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_crop_image_edit"
                android:background="@android:color/transparent"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/icon_item_title_size"
                android:text="@string/crop"/>

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_width="@dimen/editor_mid_row_size"
            android:layout_height="@dimen/editor_mid_row_size" >
            <ImageView
                android:id="@+id/btn_rotate"
                android:layout_width="@dimen/icon_item_image_size_recycler"
                android:layout_height="@dimen/icon_item_image_size_recycler"
                android:scaleType="fitCenter"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_rotate"
                android:background="@android:color/transparent"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/icon_item_title_size"
                android:text="@string/rotate"/>

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_width="@dimen/editor_mid_row_size"
            android:layout_height="@dimen/editor_mid_row_size" >
            <ImageView
                android:id="@+id/btn_text"
                android:layout_width="@dimen/icon_item_image_size_recycler"
                android:layout_height="@dimen/icon_item_image_size_recycler"
                android:scaleType="fitCenter"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_write"
                android:background="@android:color/transparent"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/icon_item_title_size"
                android:text="@string/text"/>

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:visibility="gone"
            android:layout_gravity="center_vertical"
            android:layout_width="@dimen/editor_mid_row_size"
            android:layout_height="@dimen/editor_mid_row_size" >
            <ImageView
                android:id="@+id/btn_beauty"
                android:layout_width="@dimen/icon_item_image_size_recycler"
                android:layout_height="@dimen/icon_item_image_size_recycler"
                android:scaleType="fitCenter"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_filter"
                android:background="@android:color/transparent"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/icon_item_title_size"
                android:text="@string/beauty"/>

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_width="@dimen/editor_mid_row_size"
            android:layout_height="@dimen/editor_mid_row_size" >
            <ImageView
                android:id="@+id/btn_enhance"
                android:layout_width="@dimen/icon_item_image_size_recycler"
                android:layout_height="@dimen/icon_item_image_size_recycler"
                android:scaleType="fitCenter"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_enhance"
                android:background="@android:color/transparent"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/icon_item_title_size"
                android:text="@string/enhance"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_width="@dimen/editor_mid_row_size"
            android:layout_height="@dimen/editor_mid_row_size">

            <ImageView
                android:id="@+id/btn_frame"
                android:layout_width="@dimen/icon_item_image_size_main"
                android:layout_height="@dimen/icon_item_image_size_main"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_frame"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/icon_item_title_size"
                android:textAlignment="center"
                android:text="@string/frame"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/chartlet_layout"
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_width="@dimen/editor_mid_row_size"
            android:layout_height="@dimen/editor_mid_row_size">

            <ImageView
                android:id="@+id/btn_chartlet"
                android:layout_width="@dimen/icon_item_image_size_main"
                android:layout_height="@dimen/icon_item_image_size_main"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_imageedit_chartlet"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/icon_item_title_size"
                android:textAlignment="center"
                android:text="@string/chartlet"/>

        </LinearLayout>

    </LinearLayout>
</HorizontalScrollView>

